style: CSS for products

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <section class="who_are_we">
         <div class="container">
-            <h2>Who we are</h2>
+            <h2>БИДНИЙ ТУХАЙ</h2>
             <div>
                 <p>
                     Our story
@@ -44,25 +44,39 @@
 
     <section class="products">
         <div class="container">
-            <h2>Our Products</h2>
-            <div class="product">
-                <img src="milk.jpg" alt="Milk">
-                <h3>Fresh Milk</h3>
-                <p>Locally sourced and pasteurized for freshness.</p>
-                <a href="#" class="btn">Learn More</a>
-            </div>
-            <div class="product">
-                <img src="cheese.jpg" alt="Cheese">
-                <h3>Artisan Cheese</h3>
-                <p>Handcrafted cheeses made from the finest ingredients.</p>
-                <a href="#" class="btn">Learn More</a>
+            <h2>Бүтээгдэхүүн</h2>
+            <div class="product-grid">
+                <div class="product-item">
+                    <img src="milk.jpg" alt="Milk">
+                    <h3>Fresh Milk</h3>
+                    <p>Locally sourced and pasteurized for freshness.</p>
+                    <a href="#" class="btn">Learn More</a>
+                </div>
+                <div class="product-item">
+                    <img src="cheese.jpg" alt="Cheese">
+                    <h3>Artisan Cheese</h3>
+                    <p>Handcrafted cheeses made from the finest ingredients.</p>
+                    <a href="#" class="btn">Learn More</a>
+                </div>
+                <div class="product-item">
+                    <img src="yogurt.jpg" alt="Yogurt">
+                    <h3>Organic Yogurt</h3>
+                    <p>Delicious and creamy, perfect for a healthy diet.</p>
+                    <a href="#" class="btn">Learn More</a>
+                </div>
+                <div class="product-item">
+                    <img src="butter.jpg" alt="Butter">
+                    <h3>Pure Butter</h3>
+                    <p>Rich and creamy, ideal for cooking and baking.</p>
+                    <a href="#" class="btn">Learn More</a>
+                </div>
             </div>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Сүүн Мөнгөн Цацал. All rights reserved.</p>
+            <p>&copy; 2024 <strong>Сүүн Мөнгөн Цацал.</strong> All rights reserved.</p>
         </div>
     </footer>
 </body>
