fix: connected the about section with the about button

--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dairy Product Website</title>
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
     <header>
         <div class="container">
             <h1>Сүүн Мөнгөн Цацал</h1>
             <div class="navi">
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Products</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Products</a></li>
+                        <li><a href="#About">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
 
@@ -31,15 +33,17 @@
         </div>
     </section>
 
-    <section class="who_are_we">
-        <div class="container">
-            <h2>БИДНИЙ ТУХАЙ</h2>
-            <div>
-                <p>
-                    Our story
-                </p>
+    <section id="About">
+        <section class="who_are_we">
+            <div class="container">
+                <h2>БИДНИЙ ТУХАЙ</h2>
+                <div>
+                    <p>
+                        Our story
+                    </p>
+                </div>
             </div>
-        </div>
+        </section>
     </section>
 
     <section class="products">
@@ -80,4 +84,5 @@
         </div>
     </footer>
 </body>
+
 </html>
