fix: connected the Products section with the Products button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <nav>
                     <ul>
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">Products</a></li>
+                        <li><a href="#Products">Products</a></li>
                         <li><a href="#About">About</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
@@ -46,6 +46,7 @@
         </section>
     </section>
 
+    <section id="Products">
     <section class="products">
         <div class="container">
             <h2>Бүтээгдэхүүн</h2>
@@ -77,6 +78,7 @@
             </div>
         </div>
     </section>
+</section>
 
     <footer>
         <div class="container">
