--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 <nav>
                     <ul>
                         <li><a href="#">Home</a></li>
-                        <li><a href="#Products">Products</a></li>
                         <li><a href="#About">About</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#Products">Products</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
