css: style changes for the contact.html

--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,6 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="products.html">Products</a></li>
-                    <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -24,7 +22,7 @@
     <section class="contact">
         <div class="container">
             <h2>Contact Us</h2>
-            <p>We'd love to hear from you! Please fill out the form below and we'll get in touch with you as soon as possible.</p>
+            <p>Бид танаас сонсохдоо баяртай байх болно! Доорх маягтыг бөглөнө үү, бид тантай аль болох хурдан холбогдох болно.</p>
             <form action="#" method="post">
                 <div class="form-group">
                     <label for="name">Name</label>
@@ -45,7 +43,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Dairy Delights. All rights reserved.</p>
+            <p>&copy; 2024 <strong>Сүүн Мөнгөн Цацал.</strong> All rights reserved.</p>
         </div>
     </footer>
 </body>
