--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
                 <h2>БИДНИЙ ТУХАЙ</h2>
                 <div>
                     <p>
-                        Our story
+                        2022 онд байгуулагдсан манай үйлдвэр нь Монголын цагаан идээний эртний уламжлалын баялаг амт,
+                        тэжээллэг чанарыг дэлхийд хүргэх зорилготой. Манай бүтээгдэхүүнүүд нь Монголын олон зуун жилийн
+                        ёс заншлыг дээдлэн, амт бүрийг аль болох жинхэнэ, байгалийн гаралтай байлгах
+                        үүднээс урласан. Манай бүтээгдэхүүний төрөлд монголын уламжлалт цагаан идээний төрөл бүрийн
+                        амттанууд багтсан бөгөөд тус бүрдээ анхаарал тавьж, чанарыг эрхэмлэн хийдэг. Цөцгийтэй тараг,
+                        сүүн ааруулнаас эхлээд баялаг цөцгийн тос, шар тос хүртэл нэмэлт хадгалалтын бодис
+                        агуулаагүй, тэжээллэг сонголтуудыг эрэлхийлдэг хүмүүст бидний бүтээгдэхүүн маш тохиромжтой.
                     </p>
                 </div>
             </div>
@@ -47,38 +53,38 @@
     </section>
 
     <section id="Products">
-    <section class="products">
-        <div class="container">
-            <h2>Бүтээгдэхүүн</h2>
-            <div class="product-grid">
-                <div class="product-item">
-                    <img src="milk.jpg" alt="Milk">
-                    <h3>Fresh Milk</h3>
-                    <p>Locally sourced and pasteurized for freshness.</p>
-                    <a href="#" class="btn">Learn More</a>
-                </div>
-                <div class="product-item">
-                    <img src="cheese.jpg" alt="Cheese">
-                    <h3>Artisan Cheese</h3>
-                    <p>Handcrafted cheeses made from the finest ingredients.</p>
-                    <a href="#" class="btn">Learn More</a>
-                </div>
-                <div class="product-item">
-                    <img src="yogurt.jpg" alt="Yogurt">
-                    <h3>Organic Yogurt</h3>
-                    <p>Delicious and creamy, perfect for a healthy diet.</p>
-                    <a href="#" class="btn">Learn More</a>
-                </div>
-                <div class="product-item">
-                    <img src="butter.jpg" alt="Butter">
-                    <h3>Pure Butter</h3>
-                    <p>Rich and creamy, ideal for cooking and baking.</p>
-                    <a href="#" class="btn">Learn More</a>
+        <section class="products">
+            <div class="container">
+                <h2>Бүтээгдэхүүн</h2>
+                <div class="product-grid">
+                    <div class="product-item">
+                        <img src="milk.jpg" alt="Milk">
+                        <h3>Fresh Milk</h3>
+                        <p>Locally sourced and pasteurized for freshness.</p>
+                        <a href="#" class="btn">Learn More</a>
+                    </div>
+                    <div class="product-item">
+                        <img src="cheese.jpg" alt="Cheese">
+                        <h3>Artisan Cheese</h3>
+                        <p>Handcrafted cheeses made from the finest ingredients.</p>
+                        <a href="#" class="btn">Learn More</a>
+                    </div>
+                    <div class="product-item">
+                        <img src="yogurt.jpg" alt="Yogurt">
+                        <h3>Organic Yogurt</h3>
+                        <p>Delicious and creamy, perfect for a healthy diet.</p>
+                        <a href="#" class="btn">Learn More</a>
+                    </div>
+                    <div class="product-item">
+                        <img src="butter.jpg" alt="Butter">
+                        <h3>Pure Butter</h3>
+                        <p>Rich and creamy, ideal for cooking and baking.</p>
+                        <a href="#" class="btn">Learn More</a>
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
     </section>
-</section>
 
     <footer>
         <div class="container">
