feat: added some text on the section

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
 
     <section class="hero">
         <div class="container">
-            <h2>Welcome to Dairy Delights</h2>
-            <p>Experience the goodness of our dairy products.</p>
-            <a href="#" class="btn">Explore Now</a>
+            <h2>Сүүн Мөнгөн Цацал-д тавтай морил</h2>
+            <p>100% органик монгол уламжлалт цагаан идээний найдвартай ханган нийлүүлэгч.</p>
         </div>
     </section>
 
