feat: added a new section "why_us"

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <div class="navi">
                 <nav>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#About">About</a></li>
-                        <li><a href="#Products">Products</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="#">Нүүр</a></li>
+                        <li><a href="#About">Бидний тухай</a></li>
+                        <li><a href="#Products">Бүтээгдэхүүн</a></li>
+                        <li><a href="contact.html">Холбогдох</a></li>
                     </ul>
                 </nav>
             </div>
@@ -51,6 +51,24 @@
         </section>
     </section>
 
+    <section class="why_us">
+        <h2>ЯАГААД БИДНИЙГ СОНГОХ ВЭ</h2>
+        <div id="why_us">
+            <div class="choose">
+                <h3>1</h3>
+                Шилдэг чанар
+            </div>
+            <div class="choose">
+                <h3>2</h3>
+                Боломжийн үнэ
+            </div>
+            <div class="choose">
+                <h3>3</h3>
+                Шинэ бүтээгдэхүүн
+            </div>
+        </div>
+    </section>
+
     <section id="Products">
         <section class="products">
             <div class="container">
@@ -58,25 +76,25 @@
                 <div class="product-grid">
                     <div class="product-item">
                         <img src="milk.jpg" alt="Milk">
-                        <h3>Fresh Milk</h3>
+                        <h3>Шинэ сүү</h3>
                         <p>Locally sourced and pasteurized for freshness.</p>
                         <a href="#" class="btn">Learn More</a>
                     </div>
                     <div class="product-item">
                         <img src="cheese.jpg" alt="Cheese">
-                        <h3>Artisan Cheese</h3>
+                        <h3>Сүүн Ааруул</h3>
                         <p>Handcrafted cheeses made from the finest ingredients.</p>
                         <a href="#" class="btn">Learn More</a>
                     </div>
                     <div class="product-item">
                         <img src="yogurt.jpg" alt="Yogurt">
-                        <h3>Organic Yogurt</h3>
+                        <h3>Шар тос</h3>
                         <p>Delicious and creamy, perfect for a healthy diet.</p>
                         <a href="#" class="btn">Learn More</a>
                     </div>
                     <div class="product-item">
                         <img src="butter.jpg" alt="Butter">
-                        <h3>Pure Butter</h3>
+                        <h3>Цөцгийн тос</h3>
                         <p>Rich and creamy, ideal for cooking and baking.</p>
                         <a href="#" class="btn">Learn More</a>
                     </div>
