--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,8 @@
             <h1>Сүүн Мөнгөн Цацал</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="index.html">Нүүр</a></li>
+                    <li><a href="contact.html">Холбогдох</a></li>
                 </ul>
             </nav>
         </div>
@@ -25,15 +25,15 @@
             <p>Бид танаас сонсохдоо баяртай байх болно! Доорх маягтыг бөглөнө үү, бид тантай аль болох хурдан холбогдох болно.</p>
             <form action="#" method="post">
                 <div class="form-group">
-                    <label for="name">Name</label>
+                    <label for="name">Нэр</label>
                     <input type="text" id="name" name="name" required>
                 </div>
                 <div class="form-group">
-                    <label for="email">Email</label>
+                    <label for="email">Имэйл</label>
                     <input type="email" id="email" name="email" required>
                 </div>
                 <div class="form-group">
-                    <label for="message">Message</label>
+                    <label for="message">Сэтгэгдэл</label>
                     <textarea id="message" name="message" rows="5" required></textarea>
                 </div>
                 <button type="submit" class="btn">Submit</button>
