feat: added pictures

--- a/index.html
+++ b/index.html
@@ -75,25 +75,25 @@
                 <h2>Бүтээгдэхүүн</h2>
                 <div class="product-grid">
                     <div class="product-item">
-                        <img src="milk.jpg" alt="Milk">
+                        <img src="/pics/suu_4.JPG" alt="Milk">
                         <h3>Шинэ сүү</h3>
                         <p>Locally sourced and pasteurized for freshness.</p>
                         <a href="#" class="btn">Learn More</a>
                     </div>
                     <div class="product-item">
-                        <img src="cheese.jpg" alt="Cheese">
+                        <img src="/pics/aaruul_2.JPG" alt="Cheese">
                         <h3>Сүүн Ааруул</h3>
                         <p>Handcrafted cheeses made from the finest ingredients.</p>
                         <a href="#" class="btn">Learn More</a>
                     </div>
                     <div class="product-item">
-                        <img src="yogurt.jpg" alt="Yogurt">
+                        <img src="/pics/shar tos.JPG" alt="Yogurt">
                         <h3>Шар тос</h3>
                         <p>Delicious and creamy, perfect for a healthy diet.</p>
                         <a href="#" class="btn">Learn More</a>
                     </div>
                     <div class="product-item">
-                        <img src="butter.jpg" alt="Butter">
+                        <img src="/pics/tsotsgii.JPG" alt="Butter">
                         <h3>Цөцгийн тос</h3>
                         <p>Rich and creamy, ideal for cooking and baking.</p>
                         <a href="#" class="btn">Learn More</a>
