feat: updated CSS with a color scheme that fits a dairy product website

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <section class="who_are_we">
             <div class="container">
                 <h2>БИДНИЙ ТУХАЙ</h2>
-                <div>
+                <div class="about-content">
+                    <img src="/pics/mongon_uher.JPG" alt="About Us" class="about-image">
                     <p>
                         2022 онд байгуулагдсан манай үйлдвэр нь Монголын цагаан идээний эртний уламжлалын баялаг амт,
                         тэжээллэг чанарыг дэлхийд хүргэх зорилготой. Манай бүтээгдэхүүнүүд нь Монголын олон зуун жилийн
@@ -87,13 +88,13 @@
                         <a href="#" class="btn">Learn More</a>
                     </div>
                     <div class="product-item">
-                        <img src="/pics/shar tos.JPG" alt="Yogurt">
+                        <img src="/pics/shar_tos.JPG" alt="Butter">
                         <h3>Шар тос</h3>
                         <p>Delicious and creamy, perfect for a healthy diet.</p>
                         <a href="#" class="btn">Learn More</a>
                     </div>
                     <div class="product-item">
-                        <img src="/pics/tsotsgii.JPG" alt="Butter">
+                        <img src="/pics/tsotsgii.JPG" alt="Cream">
                         <h3>Цөцгийн тос</h3>
                         <p>Rich and creamy, ideal for cooking and baking.</p>
                         <a href="#" class="btn">Learn More</a>
