fix: small changes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- Header Section -->
     <header>
         <div class="container">
             <h1>Сүүн Мөнгөн Цацал</h1>
@@ -25,6 +26,7 @@
         </div>
     </header>
 
+    <!-- Hero Section -->
     <section class="hero">
         <div class="container">
             <h2>Сүүн Мөнгөн Цацал-д тавтай морил</h2>
@@ -32,26 +34,26 @@
         </div>
     </section>
 
-    <section id="About">
-        <section class="who_are_we">
-            <div class="container">
-                <h2>БИДНИЙ ТУХАЙ</h2>
-                <div class="about-content">
-                    <img src="/pics/mongon_uher.JPG" alt="About Us" class="about-image">
-                    <p>
-                        2022 онд байгуулагдсан манай үйлдвэр нь Монголын цагаан идээний эртний уламжлалын баялаг амт,
-                        тэжээллэг чанарыг дэлхийд хүргэх зорилготой. Манай бүтээгдэхүүнүүд нь Монголын олон зуун жилийн
-                        ёс заншлыг дээдлэн, амт бүрийг аль болох жинхэнэ, байгалийн гаралтай байлгах
-                        үүднээс урласан. Манай бүтээгдэхүүний төрөлд монголын уламжлалт цагаан идээний төрөл бүрийн
-                        амттанууд багтсан бөгөөд тус бүрдээ анхаарал тавьж, чанарыг эрхэмлэн хийдэг. Цөцгийтэй тараг,
-                        сүүн ааруулнаас эхлээд баялаг цөцгийн тос, шар тос хүртэл нэмэлт хадгалалтын бодис
-                        агуулаагүй, тэжээллэг сонголтуудыг эрэлхийлдэг хүмүүст бидний бүтээгдэхүүн маш тохиромжтой.
-                    </p>
-                </div>
+    <!-- About Us Section -->
+    <section id="About" class="who_are_we">
+        <div class="container">
+            <h2>БИДНИЙ ТУХАЙ</h2>
+            <div class="about-content">
+                <img src="/pics/mongon_uher.JPG" alt="About Us" class="about-image">
+                <p>
+                    2022 онд байгуулагдсан манай үйлдвэр нь Монголын цагаан идээний эртний уламжлалын баялаг амт,
+                    тэжээллэг чанарыг дэлхийд хүргэх зорилготой. Манай бүтээгдэхүүнүүд нь Монголын олон зуун жилийн
+                    ёс заншлыг дээдлэн, амт бүрийг аль болох жинхэнэ, байгалийн гаралтай байлгах үүднээс урласан.
+                    Манай бүтээгдэхүүний төрөлд монголын уламжлалт цагаан идээний төрөл бүрийн амттанууд багтсан
+                    бөгөөд тус бүрдээ анхаарал тавьж, чанарыг эрхэмлэн хийдэг. Цөцгийтэй тараг, сүүн ааруулнаас
+                    эхлээд баялаг цөцгийн тос, шар тос хүртэл нэмэлт хадгалалтын бодис агуулаагүй, тэжээллэг
+                    сонголтуудыг эрэлхийлдэг хүмүүст бидний бүтээгдэхүүн маш тохиромжтой.
+                </p>
             </div>
-        </section>
+        </div>
     </section>
 
+    <!-- Why Us Section -->
     <section class="why_us">
         <h2>ЯАГААД БИДНИЙГ СОНГОХ ВЭ</h2>
         <div id="why_us">
@@ -70,40 +72,40 @@
         </div>
     </section>
 
-    <section id="Products">
-        <section class="products">
-            <div class="container">
-                <h2>Бүтээгдэхүүн</h2>
-                <div class="product-grid">
-                    <div class="product-item">
-                        <img src="/pics/suu_4.JPG" alt="Milk">
-                        <h3>Шинэ сүү</h3>
-                        <p>Locally sourced and pasteurized for freshness.</p>
-                        <a href="#" class="btn">Learn More</a>
-                    </div>
-                    <div class="product-item">
-                        <img src="/pics/aaruul_2.JPG" alt="Cheese">
-                        <h3>Сүүн Ааруул</h3>
-                        <p>Handcrafted cheeses made from the finest ingredients.</p>
-                        <a href="#" class="btn">Learn More</a>
-                    </div>
-                    <div class="product-item">
-                        <img src="/pics/shar_tos.JPG" alt="Butter">
-                        <h3>Шар тос</h3>
-                        <p>Delicious and creamy, perfect for a healthy diet.</p>
-                        <a href="#" class="btn">Learn More</a>
-                    </div>
-                    <div class="product-item">
-                        <img src="/pics/tsotsgii.JPG" alt="Cream">
-                        <h3>Цөцгийн тос</h3>
-                        <p>Rich and creamy, ideal for cooking and baking.</p>
-                        <a href="#" class="btn">Learn More</a>
-                    </div>
+    <!-- Products Section -->
+    <section id="Products" class="products">
+        <div class="container">
+            <h2>Бүтээгдэхүүн</h2>
+            <div class="product-grid">
+                <div class="product-item">
+                    <img src="/pics/suu_4.JPG" alt="Milk">
+                    <h3>Шинэ сүү</h3>
+                    <p>Locally sourced and pasteurized for freshness.</p>
+                    <a href="#" class="btn">Learn More</a>
+                </div>
+                <div class="product-item">
+                    <img src="/pics/aaruul_2.JPG" alt="Cheese">
+                    <h3>Сүүн Ааруул</h3>
+                    <p>Handcrafted cheeses made from the finest ingredients.</p>
+                    <a href="#" class="btn">Learn More</a>
+                </div>
+                <div class="product-item">
+                    <img src="/pics/shar_tos.JPG" alt="Butter">
+                    <h3>Шар тос</h3>
+                    <p>Delicious and creamy, perfect for a healthy diet.</p>
+                    <a href="#" class="btn">Learn More</a>
+                </div>
+                <div class="product-item">
+                    <img src="/pics/tsotsgii.JPG" alt="Cream">
+                    <h3>Цөцгийн тос</h3>
+                    <p>Rich and creamy, ideal for cooking and baking.</p>
+                    <a href="#" class="btn">Learn More</a>
                 </div>
             </div>
-        </section>
+        </div>
     </section>
 
+    <!-- Footer Section -->
     <footer>
         <div class="container">
             <p>&copy; 2024 <strong>Сүүн Мөнгөн Цацал.</strong> All rights reserved.</p>
