--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="container">
             <h2>БИДНИЙ ТУХАЙ</h2>
             <div class="about-content">
-                <img src="/pics/mongon_uher.JPG" alt="About Us" class="about-image">
+                <img src="pics\mongon_uher.JPG" alt="About Us" class="about-image">
                 <p>
                     2022 онд байгуулагдсан манай үйлдвэр нь Монголын цагаан идээний эртний уламжлалын баялаг амт,
                     тэжээллэг чанарыг дэлхийд хүргэх зорилготой. Манай бүтээгдэхүүнүүд нь Монголын олон зуун жилийн
@@ -78,25 +78,25 @@
             <h2>Бүтээгдэхүүн</h2>
             <div class="product-grid">
                 <div class="product-item">
-                    <img src="/pics/suu_4.JPG" alt="Milk">
+                    <img src="pics\suu_4.JPG" alt="Milk">
                     <h3>Шинэ сүү</h3>
                     <p>Locally sourced and pasteurized for freshness.</p>
                     <a href="#" class="btn">Learn More</a>
                 </div>
                 <div class="product-item">
-                    <img src="/pics/aaruul_2.JPG" alt="Cheese">
+                    <img src="pics\aaruul_2.JPG" alt="Cheese">
                     <h3>Сүүн Ааруул</h3>
                     <p>Handcrafted cheeses made from the finest ingredients.</p>
                     <a href="#" class="btn">Learn More</a>
                 </div>
                 <div class="product-item">
-                    <img src="/pics/shar_tos.JPG" alt="Butter">
+                    <img src="pics\shar tos.JPG" alt="Butter">
                     <h3>Шар тос</h3>
                     <p>Delicious and creamy, perfect for a healthy diet.</p>
                     <a href="#" class="btn">Learn More</a>
                 </div>
                 <div class="product-item">
-                    <img src="/pics/tsotsgii.JPG" alt="Cream">
+                    <img src="pics\tsotsgii.JPG" alt="Cream">
                     <h3>Цөцгийн тос</h3>
                     <p>Rich and creamy, ideal for cooking and baking.</p>
                     <a href="#" class="btn">Learn More</a>
