style: some style changes

--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Бидэнтэй холбогдоорой</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -21,7 +23,7 @@
 
     <section class="contact">
         <div class="container">
-            <h2>Contact Us</h2>
+            <h2>Бидэнтэй Холбогдоорой</h2>
             <p>Бид танаас сонсохдоо баяртай байх болно! Доорх маягтыг бөглөнө үү, бид тантай аль болох хурдан холбогдох болно.</p>
             <form action="#" method="post">
                 <div class="form-group">
@@ -36,7 +38,7 @@
                     <label for="message">Сэтгэгдэл</label>
                     <textarea id="message" name="message" rows="5" required></textarea>
                 </div>
-                <button type="submit" class="btn">Submit</button>
+                <button type="submit" class="btn">Илгээх</button>
             </form>
         </div>
     </section>
@@ -47,4 +49,5 @@
         </div>
     </footer>
 </body>
+
 </html>
