--- a/index.html
+++ b/index.html
@@ -81,25 +81,25 @@
                 <div class="product-item">
                     <img src="pics\suu_4.JPG" alt="Milk">
                     <h3>Шинэ сүү</h3>
-                    <p>Locally sourced and pasteurized for freshness.</p>
+                    <p>Байгалийн өвсөөр тэжээгдсэн үнээний цэвэр, шинэхэн сүү.</p>
                     <a href="#" class="btn">Learn More</a>
                 </div>
                 <div class="product-item">
                     <img src="pics\aaruul_2.JPG" alt="Cheese">
                     <h3>Сүүн Ааруул</h3>
-                    <p>Handcrafted cheeses made from the finest ingredients.</p>
+                    <p>Шинэхэн ааруул, торгомсог мэдрэмж, тэжээллэг амттай.</p>
                     <a href="#" class="btn">Learn More</a>
                 </div>
                 <div class="product-item">
                     <img src="pics\shar tos.JPG" alt="Butter">
                     <h3>Шар тос</h3>
-                    <p>Delicious and creamy, perfect for a healthy diet.</p>
+                    <p>Цөцгийн тосоор баялаг, зөөлөн тунгалаг болгосон цэвэр шар тос.</p>
                     <a href="#" class="btn">Learn More</a>
                 </div>
                 <div class="product-item">
                     <img src="pics\tsotsgii.JPG" alt="Cream">
                     <h3>Цөцгийн тос</h3>
-                    <p>Rich and creamy, ideal for cooking and baking.</p>
+                    <p>Жинхэнэ амтыг мэдрэхийн тулд хийсэн өтгөн цөцгийн тос.</p>
                     <a href="#" class="btn">Learn More</a>
                 </div>
             </div>
